初始化TOPSQL显示

--- a/MySQL/Monitor/Web/template/base.html
+++ b/MySQL/Monitor/Web/template/base.html
@@ -122,7 +122,35 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-md-6">TOP SQL</div>
+                <div class="col-md-6">
+                    <p><strong>TOP SQL</strong></t>
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>实例</th>
+                                <th>checksum</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>334</td>
+                                <td><a href="">d9cd815b2265764c3543f10fa</a></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>351</td>
+                                <td><a href="">72be0aa10eb2267628dce322b</a><td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>105</td>
+                                <td><a href="">ab08c7f10ebd68dceba02aba3</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
       </div>
 
