调整告警状态的图标显示

--- a/MySQL/Monitor/Web/template/base.html
+++ b/MySQL/Monitor/Web/template/base.html
@@ -94,7 +94,7 @@
                                 <td>MySQL连接恢复</td>
                                 <td>实例334Connection OK</td>
                                 <td>
-                                    <button type="button" class="btn btn-success">
+                                    <button type="button" class="btn btn-success btn-xs" disabled="disabled">
                                         正常
                                     </button>
                                 </td>
@@ -105,7 +105,7 @@
                                 <td>MySQL连接中断</td>
                                 <td>实例334连接未成功,尝试15次</td>
                                 <td>
-                                    <button type="button" class="btn btn-danger">
+                                    <button type="button" class="btn btn-danger btn-xs" disabled="disabled">
                                         紧急
                                     </button>
                             </tr>
@@ -115,7 +115,7 @@
                                 <td>实例334连接中断</td>
                                 <td>实例334连接中断,Timeout</td>
                                 <td>
-                                    <button type="button" class="btn btn-warning">
+                                    <button type="button" class="btn btn-warning btn-xs" disabled="disabled">
                                         警告
                                     </button>
                             </tr>
