调整页面标题及介绍文字显示

--- a/MySQL/Monitor/Web/static/css/starter-template.css
+++ b/MySQL/Monitor/Web/static/css/starter-template.css
@@ -5,3 +5,8 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
