--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -59,7 +59,7 @@
 
     <div class="container">
 
-      <div class="starter-template">
+      <div class="jumbotron">
         <h1>MySQL监控系统</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
