--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -189,10 +189,11 @@
                 xmlhttp.send();
                 return xmlhttp.responseText;
             }
+            var js = JSON.parse(getConnection())
 
             var lineChartData = {
                 // x轴的标示
-                labels : ["January","February","March","April","May","June","July"],
+                labels : js.labels,
                 // 数据，数组中的每一个object代表一条线
                 datasets : [
                     {
@@ -207,14 +208,14 @@
                     // 点的边线颜色
                     pointStrokeColor : "#fff",
                     // 与x轴标示对应的数据
-                    data : [65,59,90,81,56,55,40]
+                    data : js.data
                     },
                     {
                     fillColor : "rgba(151,187,205,0)",
                     strokeColor : "rgba(151,187,205,1)",
                     pointColor : "rgba(151,187,205,1)",
                     pointStrokeColor : "#fff",
-                    data : [28,48,40,19,96,27,100]
+                    data : [28,48,40,19,36,27]
                     }
                 ]
             }
@@ -236,8 +237,6 @@
             ];
 
             var myPie = new Chart(document.getElementById("canvasPipe").getContext("2d")).Pie(pieData);
-            var js = JSON.parse(getConnection())
-            alert(js.data);
         </script>
     {% end %}
   </body>
