--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -185,26 +185,35 @@
                 return xmlhttp.responseText;
             }
             var js = JSON.parse(getConnection(1))
+            {% for inst in instance %}
+                var js{{ inst[0] }} = JSON.parse(getConnection({{ inst[0] }}));
+            {% end %}
 
             var lineChartData = {
                 // x轴的标示
                 labels : js.labels,
                 // 数据，数组中的每一个object代表一条线
                 datasets : [
-                    {
-                    // 颜色的使用类似于CSS，你也可以使用RGB、HEX或者HSL
-                    // rgba颜色中最后一个值代表透明度
-                    // 填充颜色
-                    fillColor : "rgba(220,220,220,0.5)",
-                    // 线的颜色
-                    strokeColor : "rgba(220,220,220,1)",
-                    // 点的填充颜色
-                    pointColor : "rgba(220,220,220,1)",
-                    // 点的边线颜色
-                    pointStrokeColor : "#fff",
-                    // 与x轴标示对应的数据
-                    data : js.data
-                    },
+                    {% for inst in instance %}
+                        {
+                        // 颜色的使用类似于CSS，你也可以使用RGB、HEX或者HSL
+                        // rgba颜色中最后一个值代表透明度
+                        // 填充颜色
+                        //fillColor : "rgba(220,220,220,0.5)",
+                        fillColor : "rgba({{ 64*inst[0] }}, {{ 64*inst[0] }}, {{ 64*inst[0] }}, 0.5)",
+                        // 线的颜色
+                        //strokeColor : "rgba(220,220,220,1)",
+                        strokeColor : "rgba({{ 64*inst[0] }}, {{ 64*inst[0] }}, {{ 64*inst[0] }}, 1)",
+                        // 点的填充颜色
+                        //pointColor : "rgba(220,220,220,1)",
+                        pointColor : "rgba({{ 64*inst[0] }}, {{ 64*inst[0] }}, {{ 64*inst[0] }}, 1)",
+                        // 点的边线颜色
+                        //pointStrokeColor : "#fff",
+                        pointStrokeColor : "#fff",
+                        // 与x轴标示对应的数据
+                        data : js{{ inst[0] }}.data
+                        },
+                    {% end %}
                     /**************************************
                     {
                     fillColor : "rgba(151,187,205,0)",
