根据T_INSTANCE中实例数动态生成MySQL实例运行饼图

--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -228,18 +228,12 @@
             var myLine = new Chart(document.getElementById("canvasLine").getContext("2d")).Line(lineChartData);
 
             var pieData = [
-                {
-                    value: 30,
-                    color:"#F38630"
-                },
-                {
-                    value : 50,
-                    color : "#E0E4CC"
-                },
-                {
-                    value : 100,
-                    color : "#69D2E7"
-                }
+                {% for st in pipe %}
+                    {
+                        value: 1,
+                        color:"#{{ format(14738636 + 220964*st[2], '02x') }}"
+                    },
+                {% end %}
             ];
 
             var myPie = new Chart(document.getElementById("canvasPipe").getContext("2d")).Pie(pieData);
