--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">复制监控</a></li>
+                <li><a href="/replicate">复制监控</a></li>
                 <li><a href="#contact">慢查询监控</a></li>
                 <li><a href="#engine">Engine Status监控</a></li>
               </ul>
@@ -165,10 +165,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    {% block tailjs %}
         <script src="{{ static_url("js/jquery-1.11.1.min.js") }}"></script>
         <script src="{{ static_url("js/Chart.min.js") }}"></script>
         <script src="{{ static_url("bootstrap/js/bootstrap.min.js") }}"></script>
+    {% block tailjs %}
         <script>
             function getConnection(id) {
                 var xmlhttp;
