调整主页面应用为绝对URL

--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MySQL监控</a>
+          <a class="navbar-brand" href="/">MySQL监控</a>
         </div>
         {% block navbar %}
             <div class="collapse navbar-collapse">
