增加QPS页面;同时增加其他各页面QPS页面链接入口

--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -49,6 +49,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="/replicate">复制监控</a></li>
+                <li><a href="/qps">QPS监控</a></li>
                 <li><a href="#contact">慢查询监控</a></li>
                 <li><a href="#engine">Engine Status监控</a></li>
               </ul>
