--- a/MySQL/Monitor/Web/template/queriesper.html
+++ b/MySQL/Monitor/Web/template/queriesper.html
@@ -4,7 +4,8 @@
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="#">复制监控</a></li>
+            <li><a href="/replicate">复制监控</a></li>
+            <li class="active"><a href="#">QPS监控</a></li>
             <li><a href="#contact">慢查询监控</a></li>
             <li><a href="#engine">Engine Status监控</a></li>
         </ul>
