--- a/MySQL/Monitor/Web/template/replication.html
+++ b/MySQL/Monitor/Web/template/replication.html
@@ -5,6 +5,7 @@
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="#">复制监控</a></li>
+            <li><a href="/qps">QPS监控</a></li>
             <li><a href="#contact">慢查询监控</a></li>
             <li><a href="#engine">Engine Status监控</a></li>
         </ul>
