调整单幅图所占空间

--- a/MySQL/Monitor/Web/template/queriesper.html
+++ b/MySQL/Monitor/Web/template/queriesper.html
@@ -23,13 +23,8 @@
 
 {% block connection %}
     <div class="col-md-6">
-        <strong>IO Thread Delay</strong>
-        <canvas id="canvasLineIO" height="450" width="600"></canvas>
-    </div>
-
-    <div class="col-md-6">
-        <strong>SQL Thread Delay</strong>
-        <canvas id="canvasLineSQL" height="450" width="600"></canvas>
+        <strong>QPS</strong>
+        <canvas id="canvasLineSQL" height="450" width="1200"></canvas>
     </div>
 {% end %}
 
