增加SLOW SQL详情入口

--- a/MySQL/Monitor/Web/template/queriesper.html
+++ b/MySQL/Monitor/Web/template/queriesper.html
@@ -6,7 +6,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/replicate">复制监控</a></li>
             <li class="active"><a href="#">QPS监控</a></li>
-            <li><a href="#contact">慢查询监控</a></li>
+            <li><a href="/slow">慢查询监控</a></li>
             <li><a href="#engine">Engine Status监控</a></li>
         </ul>
     </div><!--/.nav-collapse -->
