--- a/MySQL/Monitor/Web/template/replication.html
+++ b/MySQL/Monitor/Web/template/replication.html
@@ -6,7 +6,7 @@
             <li><a href="/">Home</a></li>
             <li class="active"><a href="#">复制监控</a></li>
             <li><a href="/qps">QPS监控</a></li>
-            <li><a href="#contact">慢查询监控</a></li>
+            <li><a href="/slow">慢查询监控</a></li>
             <li><a href="#engine">Engine Status监控</a></li>
         </ul>
     </div><!--/.nav-collapse -->
