--- a/MySQL/Monitor/Web/template/index.html
+++ b/MySQL/Monitor/Web/template/index.html
@@ -16,6 +16,8 @@
         <!-- Custom styles for this template -->
         <link href="{{ static_url("css/starter-template.css") }}" rel="stylesheet">
     {% end %}
+    {% block usercss %}
+    {% end %}
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
