--- a/MySQL/Monitor/Web/template/slow.html
+++ b/MySQL/Monitor/Web/template/slow.html
@@ -1,5 +1,8 @@
 {% extends "index.html" %}
 
+{% block usercss %}
+    <link href="{{ static_url("css/slow.css") }}" rel="stylesheet">
+{% end %}
 {% block navbar %}
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -22,7 +25,7 @@
 {% end %}
 
 {% block connection %}
-    <div class="col-md-8">
+    <div class="col-md-12">
         <p><strong>SLOW SQL</strong></p>
         <table class="table table-hover">
             <tr>
@@ -47,7 +50,7 @@
             </tr>
             <tr>
                 <th><strong>SQL:</strong></th>
-                <td>{{ sqlhash[5] }}</td>
+                <td><abbr title="{{ sqlhash[5] }}">{{ sqlhash[5] }}</abbr></td>
             </tr>
             <tr>
                 <th><strong>检测时间:</strong></th>
