由于调整了T_SLOW表结构,需调整前端页面

--- a/MySQL/Monitor/Web/template/slow.html
+++ b/MySQL/Monitor/Web/template/slow.html
@@ -37,23 +37,23 @@
                 <td>{{ sqlhash[1] }}</td>
             </tr>
             <tr>
-                <th><strong>执行次数:</strong></th>
+                <th><strong>返回的记录数:</strong></th>
                 <td>{{ sqlhash[2] }}</td>
             </tr>
             <tr>
-                <th><strong>耗时:</strong></th>
+                <th><strong>执行时间:</strong></th>
                 <td>{{ sqlhash[3] }}</td>
             </tr>
             <tr>
-                <th><strong>返回记录:</strong></th>
+                <th><strong>扫描的记录数:</strong></th>
                 <td>{{ sqlhash[4] }}</td>
             </tr>
             <tr>
-                <th><strong>SQL:</strong></th>
+                <th><strong>SQL文本:</strong></th>
                 <td><abbr title="{{ sqlhash[5] }}">{{ sqlhash[5] }}</abbr></td>
             </tr>
             <tr>
-                <th><strong>检测时间:</strong></th>
+                <th><strong>持续时长:</strong></th>
                 <td>{{ sqlhash[6] }}</td>
             </tr>
         </table>
